# libfat32

./: CMakeLists.txt  LICENSE.txt  README.md  config.h.cmake
build_src/: CMakeLists.txt
build_src/crc32_constants/: CMakeLists.txt  main.c
build_src/crc32_testgen/: CMakeLists.txt  crc32.smt2  main.c
include/libfat32/: crc.h  function_decl.h  gpt.h  guid.h  macro_tricks.h  status.h
include/libfat32/model_check/: assert.h  function_contracts.h  memory.h
models/: CMakeLists.txt
models/crc/: CMakeLists.txt
models/crc/crc32/: CMakeLists.txt  main.c
models/crc/crc32_shadow/: CMakeLists.txt  main.c
models/gpt/: CMakeLists.txt
models/gpt/gpt_protective_mbr_init_span/: CMakeLists.txt  main.c
models/gpt/gpt_protective_mbr_init_span_shadow/: CMakeLists.txt  main.c
models/gpt/gpt_protective_mbr_partition_record_init_clear/: CMakeLists.txt  main.c
models/gpt/gpt_protective_mbr_partition_record_init_clear_shadow/: CMakeLists.txt  main.c
models/gpt/gpt_protective_mbr_partition_record_init_span/: CMakeLists.txt  main.c
models/gpt/gpt_protective_mbr_partition_record_init_span_shadow/: CMakeLists.txt  main.c
models/gpt/gpt_protective_mbr_partition_record_read/: CMakeLists.txt  main.c
models/gpt/gpt_protective_mbr_partition_record_read_shadow/: CMakeLists.txt  main.c
models/gpt/gpt_protective_mbr_partition_record_write/: CMakeLists.txt  main.c
models/gpt/gpt_protective_mbr_partition_record_write_shadow/: CMakeLists.txt  main.c
models/gpt/gpt_protective_mbr_read/: CMakeLists.txt  main.c
models/gpt/gpt_protective_mbr_read_shadow/: CMakeLists.txt  main.c
models/gpt/gpt_protective_mbr_write/: CMakeLists.txt  main.c
models/gpt/gpt_protective_mbr_write_shadow/: CMakeLists.txt  main.c
models/guid/: CMakeLists.txt
models/guid/guid_init_from_data/: CMakeLists.txt  main.c
models/guid/guid_init_from_data_shadow/: CMakeLists.txt  main.c
models/guid/guid_init_from_string/: CMakeLists.txt  main.c
models/guid/guid_init_from_string_shadow/: CMakeLists.txt  main.c
models/guid/guid_write_to_binary/: CMakeLists.txt  main.c
models/guid/guid_write_to_binary_shadow/: CMakeLists.txt  main.c
models/guid/guid_write_to_string/: CMakeLists.txt  main.c
models/guid/guid_write_to_string_shadow/: CMakeLists.txt  main.c
models/shadow/crc/: crc32.c
models/shadow/gpt/: gpt_protective_mbr_init_span.c  gpt_protective_mbr_partition_record_init_clear.c  gpt_protective_mbr_partition_record_init_span.c  gpt_protective_mbr_partition_record_read.c  gpt_protective_mbr_partition_record_write.c  gpt_protective_mbr_read.c  gpt_protective_mbr_write.c  property_gpt_protective_mbr_partition_record_valid.c  property_gpt_protective_mbr_valid.c
models/shadow/guid/: guid_init_from_data.c  guid_init_from_string.c  guid_write_to_binary.c  guid_write_to_string.c
models/shadow/stdc/: isxdigit.c
src/: stub.c
src/crc/: crc32.c
src/gpt/: gpt_protective_mbr_init_span.c  gpt_protective_mbr_partition_record_init_clear.c  gpt_protective_mbr_partition_record_init_span.c  gpt_protective_mbr_partition_record_read.c  gpt_protective_mbr_partition_record_write.c  gpt_protective_mbr_read.c  gpt_protective_mbr_write.c
src/guid/: guid_init_from_data.c  guid_init_from_string.c  guid_write_to_binary.c  guid_write_to_string.c
test/: stub.cpp
test/gpt/: test_protective_mbr.cpp
test/guid/: test_guid.cpp
