SET(CRC32_TESTGEN_SOURCES main.c)

ADD_EXECUTABLE(crc32_testgen ${CRC32_TESTGEN_SOURCES})
SET_PROPERTY(TARGET testfat32 PROPERTY C_STANDARD 23)
TARGET_COMPILE_OPTIONS(crc32_testgen PRIVATE ${C_RELEASE_BUILD_OPTIONS})
TARGET_LINK_LIBRARIES(crc32_testgen PkgConfig::z3)

set_source_files_properties(
    main.c
    PROPERTIES OBJECT_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/crc32.smt2"
)
