ADD_SUBDIRECTORY(gpt_protective_mbr_init_span)
ADD_SUBDIRECTORY(gpt_protective_mbr_init_span_shadow)
ADD_SUBDIRECTORY(gpt_protective_mbr_partition_record_init_clear)
ADD_SUBDIRECTORY(gpt_protective_mbr_partition_record_init_clear_shadow)
ADD_SUBDIRECTORY(gpt_protective_mbr_partition_record_init_span)
ADD_SUBDIRECTORY(gpt_protective_mbr_partition_record_init_span_shadow)
ADD_SUBDIRECTORY(gpt_protective_mbr_partition_record_read)
