ADD_SUBDIRECTORY(guid_init_from_data)
ADD_SUBDIRECTORY(guid_init_from_data_shadow)
ADD_SUBDIRECTORY(guid_init_from_string)
ADD_SUBDIRECTORY(guid_init_from_string_shadow)
ADD_SUBDIRECTORY(guid_write_to_binary)
ADD_SUBDIRECTORY(guid_write_to_binary_shadow)
ADD_SUBDIRECTORY(guid_write_to_string)
ADD_SUBDIRECTORY(guid_write_to_string_shadow)
