SET(MC_SOURCES
    ${CMAKE_SOURCE_DIR}/models/shadow/crc/crc32.c
    main.c)

ADD_EXECUTABLE(model_crc32_shadow ${MC_SOURCES})
SET_TARGET_PROPERTIES(
    model_crc32_shadow PROPERTIES
    C_COMPILER_LAUNCHER "${COMPILER_CHOOSER};goto-cc"
    C_LINKER_LAUNCHER "${LINKER_CHOOSER};goto-ld")
TARGET_COMPILE_OPTIONS(
    model_crc32_shadow PRIVATE -DCBMC ${C_RELEASE_BUILD_OPTIONS})
SET_PROPERTY(
    TARGET model_crc32_shadow
    PROPERTY JOB_POOL_LINK console)

ADD_CUSTOM_COMMAND(
    TARGET model_crc32_shadow
    POST_BUILD
    COMMAND cbmc ${CBMC_OPTIONS} model_crc32_shadow
    USES_TERMINAL)
